# rake

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  readme.md
.github/workflows/: ci.yml  release.yml
benchmark/: bench_script_scoop.ps1
crates/rake-cli/: Cargo.toml  build.rs
crates/rake-cli/src/: main.rs  util.rs
crates/rake-cli/src/cmd/: alias.rs  bucket.rs  cache.rs  cat.rs  checkup.rs  cleanup.rs  config.rs  download.rs  export_.rs  hold.rs  home.rs  import_.rs  info.rs  install.rs  list.rs  mod.rs  reset.rs  search.rs  self_.rs  shim.rs  status.rs  unhold.rs  uninstall.rs  update.rs  which.rs
crates/rake-core/: Cargo.toml
crates/rake-core/src/: bucket.rs  config_resolver.rs  error.rs  event.rs  lib.rs  session.rs
crates/rake-core/src/infra/: archive.rs  env.rs  fs.rs  git.rs  http.rs  mod.rs  persist.rs  script.rs  shim.rs  shortcut.rs  system.rs
crates/rake-core/src/operations/: bucket.rs  cache.rs  checkup.rs  cleanup.rs  cleanup_tests.rs  download.rs  hold.rs  install.rs  mod.rs  query.rs  reset.rs  status.rs  uninstall.rs  update.rs
crates/rake-domain/: Cargo.toml
crates/rake-domain/src/: arch.rs  bucket.rs  config.rs  error.rs  lib.rs  manifest.rs  one_or_many.rs  package.rs  version.rs
crates/rake-hash/: Cargo.toml
crates/rake-hash/src/: lib.rs
crates/rake-shim-bin/: Cargo.toml
crates/rake-shim-bin/src/: main.rs
language/: readme_cn.md
scripts/: bootstrap.ps1
