[package]
name = "rake-cli"
version = "0.1.0"
edition = "2024"
description = "Rake CLI binary"

[dependencies]
rake-core = { path = "../rake-core" }
rake-domain = { path = "../rake-domain" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
crossterm = "0.29"
indicatif = "0.17"
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
winres = "0.1"

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "rake"
path = "src/main.rs"
