[package]
name = "rake-core"
version = "0.1.0"
edition = "2024"
description = "Rake engine — orchestration, infrastructure traits, operations"

[dependencies]
rake-domain = { path = "../rake-domain" }

serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
zip = "2"
sevenz-rust2 = "0.21"
async-compression = { version = "0.4", features = ["tokio", "gzip", "bzip2", "xz"] }
tokio-tar = "0.3"
futures-util = "0.3"
remove_dir_all = "0.7"
walkdir = "2"
dirs = "6"
rayon = "1"
flume = "0.12"
async-trait = "0.1"
sha2 = "0.10"
sha1 = "0.10"
md5 = { package = "md-5", version = "0.10" }
hex = "0.4"
indicatif = "0.17"
crossterm = "0.28"
git2 = "0.19"
tempfile = "3"

[dev-dependencies]

[target.'cfg(windows)'.dependencies]
junction = "1.2"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_UI_WindowsAndMessaging", "Win32_System_SystemServices", "Win32_System_Environment", "Win32_Storage_FileSystem"] }

[lints.rust]
unsafe_code = "warn"
